# milp-solver

./: CMakeLists.txt  algo.cpp  algo.h  branch_and_bound.cpp  branch_and_bound.h  direct_method.cpp  direct_method.h  dual_method.cpp  dual_method.h  main.cpp  utility.cpp  utility.h
graph/: 2.txt  README.txt
graph/1/: edges.txt  nodes.txt
graph/2/: edges.txt  nodes.txt
